--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,8 +3,8 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>About</h2>
-        <p class="fst-italic">My primary objective is to enhance my skill set and advance in the IT field, consistently acquiring new software-related abilities through independent learning.</p>
+        <h2>Acerca de</h2>
+        <p class="fst-italic">¡Bienvenido a mi mundo de transformación y crecimiento! Soy Alexis Castro, un apasionado ex futbolista profesional convertido en coach ontológico. Mi viaje desde los campos de juego hasta el mundo del desarrollo personal ha sido una aventura apasionante.</p>
       </div>
 
       <div class="row">
@@ -12,14 +12,14 @@
           <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>QA Analyst</h3>
+          <h3>Coach Ontológico</h3>
 
           <div class="row" *ngFor="let info of personalInformation" >
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>{{ info.email }}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>{{ info.city }}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> <a href="{{ info.website }}" class="link-primary">Pedro Castro</a> </span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>{{ info.city }}</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> <a href="{{ info.website }}" class="link-primary">Alexis Castro</a> </span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span> <a href="{{ info.linkedin }}" class="link-primary">LinkedIn</a> </span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <span> <a href="{{ info.github }}" class="link-primary">Github</a> </span></li>
               </ul>
