--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -3,98 +3,95 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Resume</h2>
-        <p class="fst-italic"> Experienced QA Analyst with 5+ years in IT. </p>
-        <p class="fst-italic"> Skilled in Agile methodologies, API testing, and PL/SQL. </p>
-        <p class="fst-italic"> Proficient in Java, Postman, Maven, Jenkins, Docker, Git, and Linux. </p>
+        <h2>Trayectoria</h2>
+        <p class="fst-italic"> Durante mi carrera en el fútbol de alto nivel, aprendí la importancia del trabajo en equipo, la disciplina y la perseverancia. Estas lecciones no solo me ayudaron a alcanzar mis metas deportivas, sino que también sentaron las bases para mi compromiso actual con el coaching ontológico. </p>
       </div>
 
       <div class="row">
 
         <div class="col-lg-6" data-aos="fade-up">
 
-          <h3 class="resume-title">Professional Experience</h3>
+          <h3 class="resume-title">Experiencia profesional</h3>
 
           <div class="resume-item">
-            <h4>QA Analyst</h4>
-            <h5>Mar 2022 - Present</h5>
-            <p><em>PPRO, London, UK </em></p>
-            <ul>
-              <li>Work management tool (Jira / Confluence)</li>
-              <li>API testing (Postman / Curl)</li>
-              <li>CI/CD tools ( Jenkins / TeamCity)</li>
-              <li>Version control system and hosting service (Git / GitLab)</li>
-              <li>SQL Database (PostgreSQL)</li>
-              <li>NoSQL Database (MongoDB)</li>
-              <li>SFTP clients ( WinSCP / MobaXTerm)</li>
-              <li>Log analysis ( Kibana / Marathon / Mesosphere)</li>
-              <li>IDEs (IntelliJ)</li>
-              <li>Java / ScreenPlay / Gherkin / Cucumber / Serenity</li>
-              <li>Code Editors (Visual Studio Code / Notepad++)</li>
-            </ul>
+            <h4>Club Atlético Miramar</h4>
+            <h5>Mar 2022 - Presente</h5>
+            <p><em>Miramar, Argentina </em></p>
           </div>
 
           <div class="resume-item">
-            <h4>QA Analyst</h4>
+            <h4>Club Atlético Brown San Vicente</h4>
             <h5>Feb 2021 - Feb 2022</h5>
-            <p><em>Qubits SRL, Cordoba, ARG </em></p>
-            <ul>
-              <li>Work management tool (Jira / Confluence)</li>
-              <li>API testing (Postman / Curl)</li>
-              <li>CI/CD tools ( Jenkins / TeamCity)</li>
-              <li>Version control system and hosting service (Git / GitLab)</li>
-              <li>SQL Database (PostgreSQL)</li>
-              <li>NoSQL Database (MongoDB)</li>
-              <li>SFTP clients ( WinSCP / MobaXTerm)</li>
-              <li>Log analysis ( Kibana / Marathon / Mesosphere)</li>
-              <li>IDEs (IntelliJ)</li>
-              <li>Code Editors ( Visual Studio Code / Notepad++)</li>
-            </ul>
+            <p><em>Rafaela, Argentina </em></p>
+
           </div>
 
           <div class="resume-item">
-            <h4>QA Analyst</h4>
+            <h4>Club Atlético Sarmiento</h4>
             <h5>Mar 2019 - Jan 2021</h5>
-            <p><em>Kolektor, Cordoba, ARG</em></p>
-            <ul>
-              <li>Performing and developing acceptance tests</li>
-              <li>Submitting/reporting issues found along the test cycle and verify their correct fix</li>
-              <li>Performing white and black box tests. Regression tests. Integration tests</li>
-              <li>Creating documentation</li>
-              <li>Creating/Execution PL/SQL queries</li>
-              <li>Verifying API Rest using Postman</li>
-              <li>Analysing log files using Kibana</li>
-            </ul>
-
-          </div>
-          <div class="resume-item">
-            <h4>QA Analyst</h4>
-            <h5>Sep 2017 - Feb 2019</h5>
-            <p><em>Dirección General de Rentas , Cordoba, ARG </em></p>
-            <ul>
-              <li>Performing and developing acceptance tests</li>
-              <li>Submitting/reporting issues found along the test cycle and verify their correct fix </li>
-              <li>Performing white and black box tests. Regression tests.</li>
-              <li>Creating documentation</li>
-            </ul>
+            <p><em>Resistencia, Argentina</em></p>
           </div>
 
+          <div class="resume-item">
+            <h4>Club Atlético Rafaela</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Rafaela, Argentina</em></p>
+          </div>
 
-          <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Computer Engineering</h4>
-            <h5>2012 - Present</h5>
-            <p><em>FCEFYN - UNC, Cordoba, ARG</em></p>
-            <p>Plan de estudio:
-              https://fcefyn.unc.edu.ar/facultad/secretarias/academica/escuelas/ingenieria-computacion/ingenieria-en-computacion/</p>
+            <h4>Club Atlético Aldosivi</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Mar del Plata, Argentina</em></p>
           </div>
+
           <div class="resume-item">
-            <h4>Computer Programming Technician</h4>
-            <h5>2009 - 2010</h5>
-            <p><em>UTN - FRC, Cordoba, ARG</em></p>
-            <p>Plan de estudio:
-              https://www.frc.utn.edu.ar/secretarias/academica/tecnicaturas/programacion/?pIs=705</p>
+            <h4>Club Atlético Sarmiento</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Junin, Argentina</em></p>
           </div>
+
+          <div class="resume-item">
+            <h4>Newell's Old Boys</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Rosario, Argentina</em></p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Godoy Cruz</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Mendoza, Argentina</em></p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Club Atlético Rafaela</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Rafaela, Argentina</em></p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Club Atlético Tucumán</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Tucumán, Argentina</em></p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Club Atlético Huracan</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Buenos Aires, Argentina</em></p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Al Ahli Club</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Dubai, Emiratos Arabes Unidos</em></p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Instituto Atlético Central Córdoba</h4>
+            <h5>Mar 2019 - Jan 2021</h5>
+            <p><em>Córdoba, Argentina</em></p>
+          </div>
+
         </div>
 
 
