--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,95 +1,43 @@
- <!-- ======= Skills Section ======= -->
- <section id="skills" class="skills section-bg">
-    <div class="container">
+  <!-- ======= Our Services Section ======= -->
+  <section id="services" class="services sections-bg">
+    <div class="container" data-aos="fade-up">
 
-      <div class="section-title">
-        <h2>Skills</h2>
-        <p class="fst-italic">The tools I use these days are listed below.</p>
+      <div class="section-header">
+        <h2>Campeonatos</h2>
+        <p>Campeonatos obtenidos a lo largo de la carrera profesional</p>
       </div>
 
-      <div class="row skills-content" *ngFor="let abil of skills">
+      <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="progress">
-            <span class="skill">Java / ScreenPlay / Gherkin / Cucumber / Serenity  <i class="val">{{abil.java}}%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" style="width: {{abil.java}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="service-item  position-relative">
+            <img src="assets/img/tucuman.png" width="300" height="300">
+            <hr>
+            <h3>Club Atletico Tucuman</h3>
+            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
           </div>
+        </div><!-- End Service Item -->
 
-          <div class="progress">
-            <span class="skill">Work management tool (Jira/Confluence) <i class="val">{{abil.jira}}%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" style="width: {{abil.jira}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="service-item  position-relative">
+            <img src="assets/img/rafaela.png" width="300" height="300">
+            <hr>
+            <h3>Club Atletico Rafaela</h3>
+            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
           </div>
+        </div><!-- End Service Item -->
 
-          <div class="progress">
-            <span class="skill">API testing (Postman/Curl) <i class="val">{{abil.postman}}%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" style="width: {{abil.postman}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="service-item  position-relative">
+            <img src="assets/img/iacc.png" width="300" height="300">
+            <hr>
+            <h3>Instituto Atletico Central Cordoba</h3>
+            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
           </div>
+        </div><!-- End Service Item -->
 
-          <div class="progress">
-            <span class="skill">Version control system and hosting service (Git/GitLab) <i class="val">{{abil.git}}%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" style="width: {{abil.git}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">CI/CD tools (Jenkins/TeamCity) <i class="val">{{abil.jenkins}}%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" style="width: {{abil.jenkins}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-          <div class="progress">
-            <span class="skill">SQL Database (PostgreSQL) <i class="val">{{abil.sql}}%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" style="width: {{abil.sql}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">NoSQL Database (MongoDB) <i class="val">{{abil.noSql}}%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" style="width: {{abil.noSql}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">SFTP clients (WinSCP/MobaXTerm) <i class="val">{{abil.sftp}}%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" style="width: {{abil.sftp}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Log analysis (Kibana/Marathon/Mesosphere) <i class="val">{{abil.log}}%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" style="width: {{abil.log}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-        </div>
 
       </div>
 
     </div>
-  </section><!-- End Skills Section -->
+  </section><!-- End Our Services Section -->
